# JuliaVC

./: .gitignore  CMakeLists.txt  embedding.c  embedding.cpp  libjulia.lib  testdll.c
